# personal_ai_email

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  noxfile.py  pyproject.toml
personal_ai_email/: classifier.py  config.py  constants.py  email.py  gmail_client.py  modules.py  signatures.py
scripts/: run_once.py
