[project]
name = "personal-ai-email"
version = "0.1.0"
description = "Automatic classification of email intent using DSPy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "ipykernel>=6.30.1",
    "ollama>=0.5.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
